//
//  AccessibilityIdentifier.swift
//  OSC Monitor
//
//  Created by Lukas Bahrle Santana on 14/05/2020.
//  Copyright © 2020 Lukas Bahrle Santana. All rights reserved.
//

import Foundation

enum AccessibilityIdentifier: String{
    case label_ip
    case textInput_port
    case button_connect
    case button_pause
    case button_clear
    case view_state_indicator
}
